html y css completado

--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COOPERATIVA FRUTOS DEL ANDE</title>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300&family=Sen:wght@400;500;700&family=Teko:wght@300;400;500;700&family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="header__nav">
+            <div class="header__izq">
+                <img src="./assets/img/logo.png" alt="Logo Frutos del Ande" class="header__logo">
+                <p class="header__text">Cooperativa Frutos del Ande</p>
+            </div>
+            <ul class="header__list">
+                <li class="header__item"><a href="#proyectos">Proyectos</a></li>
+                <li class="header__item"><a href="#foros">Foros</a></li>
+                <li class="header__item"><a href="#reconocimientos">Reconocimientos</a></li>
+                <li class="header__item"><a href="#sugerencias">Sugerencias</a></li>
+
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="main__principal">
+            <h1>Bienvenido a La Plataforma de <br> Frutos del Ande</h1>
+            <p>Tu portal centralizado para la excelencia laboral en Frutos del Ande. <br>
+            ¡Bienvenido a un espacio diseñado para tu crecimiento y contribución!</p>
+        </section>
+        <section>
+            <a href="./html/login.html" target="_blank" class="main__button">Iniciar</a>
+        </section>
+        </section>
+    </main>
 </body>
 </html>
