--- a/html/cliente.html
+++ b/html/cliente.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="../css/cliente.css">
     <title>Registro de Clientes - Cooperativa Frutos del Ande</title>
+    
 </head>
 <body>
 
@@ -13,32 +14,38 @@
 
   <div class="registro-clientes">
     <h1>Registro de Clientes</h1>
-    <form action="procesar_registro_cliente.php" method="post">
+    <form  id="miFormulario" action="../php/procesar_registro_cliente.php" method="post" onsubmit="return validarRegistro()">
         <div class="campo">
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required>
+            <span id="errorNombre" class="error"></span>
         </div>
 
         <div class="campo">
             <label for="direccion">Dirección:</label>
             <input type="text" id="direccion" name="direccion" required>
+            <span id="errorDireccion" class="error"></span>
         </div>
 
         <div class="campo">
             <label for="contacto">Contacto:</label>
             <input type="text" id="contacto" name="contacto" required>
+            <span id="errorContacto" class="error"></span>
+
         </div>
 
         <div class="campo">
             <label for="referencia">Referencia:</label>
             <textarea id="referencia" name="referencia" required></textarea>
+            <span id="errorReferencia" class="error"></span>
         </div>
 
         <div class="boton-registrar-cliente">
-            <button type="submit">Registrar Cliente</button>
-        </div>
+            <button type="button" onclick="validarRegistro()">Registrar Cliente</button>
+        </div>   
     </form>
   </div>
-
+  <script src="../js/validacionRegistro.js" ></script>
 </body>
 </html>
+
