Ultima modificación con js

--- a/html/main.html
+++ b/html/main.html
@@ -92,7 +92,7 @@
     </div>
 
     <div class="home_content">
-        <div class="text">Pagina de Registro</div>
+        <div class="text">FRUTOS DEL ANDE</div>
     </div>
 
     <script src="codigo.js"></script>
